[package]
name = "trees"
version = "0.1.0"
edition = "2021"

[dependencies]
graph = { git="https://github.com/adam-mcdaniel/graph", branch="main" }
# graph = { path="../graph" }
lazy_static = "1.5.0"
rand = "0.8.5"
rayon = "1.10.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
debug = true
